applications/istio/envoycontroller-gatewayapi-bookinfo/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
  - name: bookinfo-gateway
    namespace: envoy-gateway-system

  hostnames:
  - "*"

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd

    backendRefs:
    - name: argocd-server
      port: 80
